hphp/test/slow/eval/syntaxerror_string.php.expectf
Before error

Fatal error: A semicolon `;` is expected here. in %s/test/slow/eval/syntaxerror_string.php(6)(d0130e5dab9d19ada27b0360a29e3621) : eval()'d code on line 1
eval returns false
